<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center|top"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sabihamumcu.kelimekutusu.MainActivity">

    <TextView
        android:textSize="30sp"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word_box"/>

    <LinearLayout
        android:layout_weight="1"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:onClick="testing"
            android:text="@string/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:onClick="addWord"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:onClick="list"
            android:text="@string/list_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:onClick="send"
        android:text="@string/send_word_box"
        android:layout_marginBottom="75dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>
