<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_kelime_ekle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context="com.sabihamumcu.kelimekutusu.AddWord">

    <EditText
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/please_add_new_word"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/wordDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/please_add_description"
        android:padding="15dp"/>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="addWord"
        android:text="@string/add"/>


</LinearLayout>
